fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ body{
   background:#1A2A33;
   margin: 0;
   text-align: center;
+  overflow-x: hidden;
 }
 
 p,
@@ -431,7 +432,7 @@ button:hover{
 /*     MEDIA QUERIES         */
 /*---------------------------*/
 
-@media all and (max-width: 500px){
+@media all and (max-width: 600px){
   .menu{
     width: 350px;
   }
